syntax = "proto3";
package otus.moryakovdv.task16.grpc;

import "UserProductService.proto";

message Product {
  int64 id = 1;
  string name = 2;
}

message ProductResponse {
  int64 id = 1;
}

service ProductService {
  rpc  createProduct(Product)  returns (ProductResponse);
  rpc  addProductToUserCart(UserProduct)  returns (ProductResponse);
}